--- a/carpetasExt/config.properties
+++ b/carpetasExt/config.properties
@@ -1,9 +1,11 @@
-#
-#Sun Jun 03 19:44:06 CEST 2018
-Servidor=si
-version=29
-RutaBaseDatos=c\:/tallerJava/dist/datos/DatosTaller
-FechaCompilacion=1/1/1970
-Server=OFICINA2\:9092
-FechaLastArranque=3/5/2018
+#Tue, 02 Jun 2015 10:51:06 +0200
+#E:\ProgramaTallerJava\tallerJava\carpetasExt\config.properties
+#Sat Oct 04 16:40:17 CEST 2014
 Mes=0
+Servidor=si
+#Nombre y puerto del servidor
+Server=OFICINA2\:9092
+#Ruta absoluta de la base de datos en el servidor
+RutaBaseDatos=c\:/tallerJava/dist/datos/DatosTaller
+version=29
+FechaCompilacion=00/00/0000
